Modify library.properties for particle

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,9 @@
-name=CAN
-version=0.3.1
-author=Sandeep Mistry <sandeep.mistry@gmail.com>
-maintainer=Sandeep Mistry <sandeep.mistry@gmail.com>
-sentence=An Arduino library for sending and receiving data using CAN bus.
-paragraph=Supports Microchip MCP2515 based boards/shields and the Espressif ESP32's built-in SJA1000 compatible CAN controller.
-category=Communication
-url=https://github.com/sandeepmistry/arduino-CAN
+name=arduino-CAN
+version=1.0.0
+author=Sandeep Mistry <sandeep.mistry@gmail.com>, Nils Zottmann
+license=MIT
+sentence=CAN bus for Particle using the MCP2515
+paragraph=This library is intended for the mesh boards which have no onboard CAN controller
+url=https://github.com/nzottmann/arduino-CAN
+repository=https://github.com/nzottmann/arduino-CAN.git
 architectures=*
-includes=CAN.h
